# no_sleep

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  no_sleep.py  no_sleep.spec  pyproject.toml  req.txt  requirements.txt  requirements_dev.txt  requirements_test.txt
.github/actions/setup-python/: action.yaml
.github/workflows/: python-ci.yml  release-ci.yml  style.yml  wheel.yml
src/no_sleep/: gui.py  run.py
