[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'no_sleep'
authors = [{name = 'Michal Plichta'}]
maintainers = [{name = 'Michal Plichta'}]
description = 'no more sleep'
license = {text = 'MIT License'}
requires-python = '>=3.9'
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: Win32 (MS Windows)',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: Microsoft :: Windows :: Windows 11',
    'Topic :: Utilities',
]
keywords = [
    'sleep', 'desktop', 'no sleep',
]
dynamic = ['version']
dependencies = [
    'pillow==11.2.1',
    'pystray==0.19.5',
]
[project.urls]
Homepage = 'https://github.com/emcek/no_sleep'
Source = 'https://github.com/emcek/no_sleep.git'
Changelog = 'https://github.com/emcek/no_sleep/blob/master/CHANGELOG.md'

[project.gui-scripts]
no_sleep = 'no_sleep.run:run'

[project.optional-dependencies]
test = [
    'GitPython==3.1.44',
    'interrogate==1.7.0',
    'isort==6.0.1',
    'lxml==5.4.0',
    'mypy==1.15.0',
    'packaging==25.0',
    'pip-audit==2.9.0',
    'ruff==0.11.8',
    'types-pillow==10.2.0.20240822',
]

[tool.setuptools.dynamic]
version = {attr = 'no_sleep.gui.__version__'}

[tool.setuptools.packages.find]
where = ['src/']
include = ['no_sleep*']

[tool.setuptools.package-data]
no_sleep = [
    '*.ico',
    'py.typed',
]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 90
verbose = 1
quiet = false

[tool.ruff]
line-length = 160
lint.select = ['E', 'F', 'C90', 'D', 'RUF']
lint.ignore = ['D100', 'D101','D104', 'D105', 'D203', 'D204', 'D212', 'RUF001', 'RUF010']

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.mypy]
ignore_missing_imports = true
html_report = 'mypyhtml'


[tool.isort]
line_length = 160

[tool.uv]
dev-dependencies = [
    'build',
    'pre_commit',
]
